@@ -1,5 +1,6 @@
 In progress - pre-release
-    -
+    - Implemented qpp::QCircuit::
+          kron() - Kronecker product with another quantum circuit description
 
 Version 1.3 - 25 July 2019
     - Minimum required CMake version is now 3.2
